[projectfirma/#104] Create ProjectFirma repository and stand up site fixing header vertical alignment
git-svn-id: https://svn.sitkatech.com/svn/sitkatech/trunk/ProjectFirma@127810 0729f40c-f363-46e8-bae2-8dcc587728a9

--- a/Source/ProjectFirma.Web/Content/Bootstrap/firma/bootstrap.firma.theme.less
+++ b/Source/ProjectFirma.Web/Content/Bootstrap/firma/bootstrap.firma.theme.less
@@ -38,6 +38,8 @@ body {
         display: inline-block;
         font-size: 30px;
         font-weight: 600;
+        vertical-align: bottom;
+        margin-bottom: 6px;
     }
 }
 
